# geostats

./: .gitignore  CITATION.cff  README.md  environment.yml  geostats.bib  pyproject.toml
geostats/: __init__.py  __init__UNUSED.py  main.py  metadata.py
notebooks/: Country-Stats.ipynb  labels.do
